# rdns.toys

./: .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PORTING_CHECKLIST.md  README.md  SETUP.md  agent.md  biome.json  justfile  package.json  pnpm-lock.yaml
.cursor/: worktrees.json
.cursor/commands/: create-commit.md  create-feature-branch.md  create-issue.md  create-pr.md  explain-error.md  init.md  update-checklist.md
.cursor/rules/: concise.mdc  no-summary.mdc
.github/: pull_request_template.md
data/: readme.md
md/: AGENT.md  CHECKLIST.md  SETUP.md
scripts/: test.js  test.sh
src/: handlers.rs  lib.rs  main.rs
src/geo/: mod.rs
src/ifsc/: mod.rs
src/services/: README.md  mod.rs
src/services/geo/: mod.rs
src/services/ip/: mod.rs
src/services/pi/: mod.rs
src/services/random/: mod.rs
src/services/uuid/: mod.rs
