[package]
name = "rdns-toys"
version = "1.0.0"
edition = "2024"
authors = ["Harsh Thakur <harshprojects2002@gmail.com>"]

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono-tz = "0.10.4"
csv = "1.3.1"
hickory-proto = "0.25.2"
hickory-server = "0.25.2"
once_cell = "1.21.3"
rand = "0.9.2"
regex = "1.11.1"
serde = "1.0.221"
serde_json = "1.0.145"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
